@@ -6,3 +6,4 @@
 - voyeur-house.life - new domain (voyeur-house.cc)
 - voyeurhouse.life - new domain (reallifecams.in)
 - uflash - fix listing, playback
+- americass removed, ceased to exist
